Updated video section, add some links and ui fixes

--- a/page-2.html
+++ b/page-2.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Financial Transformation Program</title>
 
-<!-- Google Font -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./css/index.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Financial Transformation Program</title>
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
 
-<div class="container">
+  <div class="container">
 
     <div class="header">💸 Financial Transformation Program 📈</div>
 
@@ -21,28 +22,17 @@
     <div class="arrow">⬇</div>
 
     <div class="video-box">
-<iframe
-  src="https://www.youtube-nocookie.com/embed/y2rBvM4R1ms?si=Com79nmgxQc0Qgmb"
-  allow="autoplay; encrypted-media; picture-in-picture"
-  allowfullscreen
-  playsinline>
-</iframe>
-<!-- <iframe
-  width="560"
-  height="315"
-  src="https://www.youtube-nocookie.com/embed/y2rBvM4R1ms?si=Com79nmgxQc0Qgmb"
-  title="YouTube video player"
-  frameborder="0"
-  allow="autoplay; encrypted-media; picture-in-picture"
-  allowfullscreen
-  playsinline>
-</iframe> -->
-
+      <iframe width="560" height="315"
+        src="https://www.youtube-nocookie.com/embed/y2rBvM4R1ms?autoplay=1&mute=1&playsinline=1"
+        title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+      </iframe>
     </div>
 
-    <div class="sub-text">⚠️ Please watch full video before filling the form. Incomplete viewers won't be contacted.</div>
+    <div class="sub-text-1">⚠️ Please watch full video before filling the form. Incomplete viewers won't be contacted.
+    </div>
 
-    <a href="https://forms.gle/KXmfNVHr5pYQp4du7"><button class="cta-btn" > Apply For Financial Transformation</button></a>
+    <a href="https://forms.gle/KXmfNVHr5pYQp4du7"><button class="cta-btn"> 💸 Apply For Financial Transformation
+        📈</button></a>
 
     <div class="sub-text">Take Action Now<br>Your Future Self Will Thank You</div>
 
@@ -50,9 +40,10 @@
 
 
 
-</div>
+  </div>
 
 
 
 </body>
+
 </html>
