--- a/page-2.html
+++ b/page-2.html
@@ -9,6 +9,9 @@
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -22,10 +25,12 @@
     <div class="arrow">⬇</div>
 
     <div class="video-box">
-      <iframe width="560" height="315"
-        src="https://www.youtube-nocookie.com/embed/y2rBvM4R1ms?autoplay=1&mute=1&playsinline=1"
-        title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
-      </iframe>
+<iframe
+  src="https://www.youtube-nocookie.com/embed/y2rBvM4R1ms?si=Com79nmgxQc0Qgmb"
+  allow="autoplay; encrypted-media; picture-in-picture"
+  allowfullscreen
+  playsinline>
+</iframe>
     </div>
 
     <div class="sub-text-1">⚠️ Please watch full video before filling the form. Incomplete viewers won't be contacted.
